# microsoft-ads-mcp

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  server.py  ty.toml
.github/workflows/: ci.yml  release.yml
scripts/: ci.sh
skill/microsoft-ads-optimizer/: SKILL.md
src/microsoft_ads_mcp/: __init__.py  __main__.py  config.py  server.py
src/microsoft_ads_mcp/api/: __init__.py  auth.py  client.py  errors.py
src/microsoft_ads_mcp/domain/: __init__.py  entities.py
src/microsoft_ads_mcp/services/: __init__.py  account_properties.py  accounts.py  bulk.py  campaigns.py  conversions.py  criteria.py  extensions.py  geo.py  insights.py  mutations.py  negatives.py  reporting.py  sites.py  url_resolution.py
src/microsoft_ads_mcp/tools/: __init__.py  _common.py  auth_tools.py  health.py  insight_tools.py  read_tools.py  reporting_tools.py  write_tools.py
tests/: conftest.py  test_auth.py  test_client_reauth.py  test_config.py  test_conversions.py  test_editorial_status.py  test_errors.py  test_extensions.py  test_geo_criteria_bulk.py  test_health_auth_state.py  test_insights.py  test_mutations.py  test_negatives.py  test_read_only_gating.py  test_reporting_scope.py  test_sites.py  test_tool_search.py  test_url_resolution.py  test_url_tracking.py  test_write_tool_schemas.py
