[project]
name = "microsoft-ads-mcp"
version = "0.2.0"
description = "MCP server for the Microsoft Advertising (Bing Ads) REST API, oriented toward agent-led campaign management and reporting."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mcp",
    "model-context-protocol",
    "microsoft-advertising",
    "bing-ads",
    "fastmcp",
    "advertising",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "fastmcp>=3.4.2,<4",
    # The official Microsoft Advertising REST SDK. Ships the `bingads.*` auth/ServiceClient
    # entry points plus OpenAPI-generated Pydantic v2 models under `openapi_client.*`.
    "msads>=13.0.28",
    # msads imports `dateutil` via its generated client but does NOT declare it. Pin it
    # ourselves so installs are reproducible (see README "SDK quirks").
    "python-dateutil>=2.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.urls]
Homepage = "https://github.com/shinypebble/microsoft-ads-mcp"
Repository = "https://github.com/shinypebble/microsoft-ads-mcp"
Issues = "https://github.com/shinypebble/microsoft-ads-mcp/issues"

[project.scripts]
microsoft-ads-mcp = "microsoft_ads_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microsoft_ads_mcp"]

# Ship the agent skill inside the wheel (next to the package) so the server can serve it as
# a `skill://` resource even when pip-installed, not just from a source checkout.
[tool.hatch.build.targets.wheel.force-include]
"skill" = "microsoft_ads_mcp/skill"

[dependency-groups]
dev = ["ruff>=0.15.17", "ty>=0.0.49", "pytest>=9.1.0"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # The msads/openapi_client generated models trip Pydantic v2 deprecation warnings; not ours.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]
